[package]
name = "actpub-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "axum 0.8 integration for actpub-federation: extractors, responders and route helpers."
categories = ["web-programming", "web-programming::http-server"]
keywords = ["activitypub", "fediverse", "axum", "federation"]

[dependencies]
actpub-federation = { workspace = true }
actpub-webfinger = { workspace = true }
actpub-nodeinfo = { workspace = true }

axum = { workspace = true, features = ["json", "query"] }
http = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
actpub-httpsig = { workspace = true }
tokio = { workspace = true, features = ["full"] }
http-body-util = { workspace = true }
httpdate = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
